--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>First Portfolio Bootstrap 5 Theme</title>
+        <title>HomePage of FYM</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,27 +55,27 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_1">Home</a>
+                            <a class="nav-link click-scroll" href="#section_1"><p style="color:black;">Home</p></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">About</a>
+                            <a class="nav-link click-scroll" href="#section_2"><p style="color:black;">Profile</p></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Papers</a>
+                            <a class="nav-link click-scroll" href="#section_3"><p style="color:black;">Papers</p></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Projects</a>
+                            <a class="nav-link click-scroll" href="#section_4"><p style="color:black;">Projects</p></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Service</a>
+                            <a class="nav-link click-scroll" href="#section_5"><p style="color:black;">Service</p></a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Interests</a>
+                            <a class="nav-link click-scroll" href="#section_6"><p style="color:black;">Interests</p></a>
                         </li>
                     </ul>
                     <div class="d-lg-flex align-items-center d-none ms-auto">
@@ -120,7 +120,7 @@
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap  justify-content-end mb-0">
-                                    <h4 class="text-black me-4 mb-0" style="text-align: center;">个  人  简  介</h4>
+                                    <h4 class="text-black me-4 mb-0" style="text-align: center;">Profile</h4>
                                 </div>
                                 <div class="container">
                                     <div class="row">
