add uid of Genshen Impact

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                 <div class="projects-thumb">
                                     <div class="projects-info">
                                         <h3 class="projects-title">Genshin Impact</h3>
-                                        <p>My UID:     And My Favorite Character is Yoimiya.</p>
+                                        <p>My UID: 175286972     And My Favorite Character is Yoimiya.</p>
 
                                     </div>
 
